# firmware-uefi

./: .editorconfig  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
crates/: common.mk
crates/system76-firmware-setup/: Makefile
crates/system76-firmware-setup/.cargo/: config.toml
crates/system76-firmware-update/: Cargo.toml  Makefile  build.rs
crates/system76-firmware-update/.cargo/: config.toml
crates/system76-gop-policy/: Cargo.toml  Makefile  build.rs  package.inf
docs/: adding-new-packages.md  adding-packages.md  building.md  edk2-integration.md
tools/xtask/: Cargo.toml  README.md
tools/xtask/src/: build.rs  cli.rs  main.rs
uefi/system76-firmware-setup/: Cargo.toml  module.inf
uefi/system76-firmware-setup/src/: fde.rs
uefi/system76-firmware-update/: Cargo.toml
uefi/system76-gop-policy/: Cargo.toml  README.md  build.rs
uefi/system76-gop-policy/src/: main.rs
