# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "xtask"
version = "0.0.0"
description = "Ad-hoc project tooling"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
